<resources>
    <string name="app_name">Currency</string>
    <!-- Button -->
    <string name="btn_list_currency">Курс валют</string>
    <string name="btn_operation">Мои операции</string>
    <string name="btn_input">Вход</string>
    <string name="btn_list_wait">Лист ожидания</string>
    <string name="btn_buy_currency">Покупки</string>
    <string name="btn_delay">Отложенные</string>
    <string name="btn_buy">Купить</string>
    <!-- FORM -->
    <string name="title">Заголовок</string>
    <string name="content">Контент</string>
    <!-- INPUT text -->
    <string name="password">Введите пароль</string>
    <string name="login">Телефон или E-mail!</string>
    <string name="valute_name">Название</string>
    <string name="price">Цена(руб.)</string>
    <string name="date">Дата</string>
    <string name="buy_value">Введите кол-во</string>
    <!-- HEADER -->
    <string name="hello">Здравствуйте!</string>
    <string name="authorization">Вход</string>
    <string name="error_msg">Что-то пошло не так!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>