<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/header"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="104dp"
        android:text="@string/hello"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="21dp" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="393dp"
        android:layout_height="173dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_currency"
        style="@style/Theme.CurrencyTest.BtnMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/btn_list_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <Button
        android:id="@+id/btn_list_wait"
        style="@style/Theme.CurrencyTest.BtnMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="144dp"
        android:text="@string/btn_list_wait"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buy"
        style="@style/Theme.CurrencyTest.BtnMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/btn_buy_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_currency"
        tools:ignore="MissingConstraints" />





</androidx.constraintlayout.widget.ConstraintLayout>